# long_arithmetic

./: CMakeLists.txt  main.c
include/: big_int.h  list.h
src/: big_int.c  list.c
